fix(context): persist page extractionStats and slim ContextMemoryExtractor
Page knowledge-pill extraction never persisted its ExtractionStats: KnowledgePageUpdater did not recordChange the field, so entityChanged stayed false and EntityRepository.storeUpdate dropped the write. The sourceHash hash-gate therefore never engaged and every throttled run re-invoked the LLM. Record extractionStats (with updateVersion=false, matching lifeCycle) so the stamp persists without churning the article version history, and preserve the stored value when an update omits it so a PUT body edit cannot wipe it (CreatePage has no extractionStats).

ContextMemoryExtractor is now a pure derivation: drop the dead persist() method and its ContextMemoryRepository dependency (the reconciler owns all writes); its constructor takes only the LLM client. Give ContextMemoryReconciler.reconcileExisting a single exit.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>